--- a/Portfolio/src/index.css
+++ b/Portfolio/src/index.css
@@ -2,16 +2,21 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    background-color: #131111;
   }
   
   body {
     line-height: 1.6;
-    color: #333;
+    color: #f7ecec;
+    
   }
   
   a {
     text-decoration: none;
     color: inherit;
+    margin-left: 15px;
+    font-size: 20px;
+    
   }
   
   button {
