--- a/Portfolio/src/index.css
+++ b/Portfolio/src/index.css
@@ -2,12 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #131111;
+    background-color: #181414bb;
   }
   
   body {
     line-height: 1.6;
-    color: #f7ecec;
+    color: #d4cbcb;
     
   }
   
